# deadbeefbot

./: .gitignore  Aptfile  Cargo.toml  Procfile  README.md  deny.toml  flake.nix  logs.txt.old  ptemp.txt  ptemp2.txt  ptemp3.txt  shell.nix  test.html  token.secret
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: lx3ag79i1g59qj2xgxglbny5v9lkzdf0-source  rw26gr9dnnl2lm7whcshiz8x4yryqqql-source
check/: Cargo.toml
check/src/: main.rs
src/: articlehistory.rs  banneralias.txt  extractors.rs  lib.rs  main.rs  remove_twitter_trackers.rs
src/articlehistory/: builder.rs  extract.rs  extractors.rs  types.rs
src/articlehistory/extractors/: articlehistory.rs  dyk.rs  failedga.rs  ga.rs  itn.rs  oldpr.rs  otd.rs
src/extractors/: dyk.rs  failedga.rs  ga.rs  itn.rs  oldpr.rs  otd.rs
