[package]
name = "deadbeefbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
wiki = { git = "https://github.com/fee1-dead/wiki" }
parsoid = "0.8.0-alpha.3"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
futures-util = "0.3.25"
serde_json = "1.0.91"
fancy-regex = "0.10.0"
url = "2.3.1"
form_urlencoded = "1.1.0"
reqwest = { version = "0.11.13", features = ["rustls-tls"], default-features = false }
kuchiki = "0.8.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.23"
rand = "0.8.5"
