[package]
name = "check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
futures = "0.3.28"
deadbeefbot = { path = "../" }
wiki = { git = "https://github.com/fee1-dead/wiki" }
parsoid = "0.8.0"
color-eyre = "0.6.2"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
futures-util = "0.3.25"
