[package]
name = "check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.1.0"
futures = "0.3.28"
deadbeefbot = { path = "../" }
wiki.workspace = true
parsoid.workspace = true
color-eyre.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures-util.workspace = true
